--- a/buildspec.yml
+++ b/buildspec.yml
@@ -32,24 +32,30 @@ phases:
       # OPTIONAL: trigger SageMaker Pipeline
       - echo "Starting SageMaker Pipeline execution"
       - | 
-          aws sagemaker create-processing-job \
-          --region $AWS_REGION \
-          --processing-job-name $JOB_NAME \
-          --role-arn $SAGEMAKER_ROLE_ARN \
-          --app-specification "{
-            \"ImageUri\": \"361509912577.dkr.ecr.eu-west-1.amazonaws.com/timesheet-dq-processing:latest\",
-            \"ContainerEntrypoint\": [
-              \"python3\",
-              \"/opt/ml/processing/code/data_quality.py\"
-            ]
-          }" \
-          --processing-resources "{
-            \"ClusterConfig\": {
-              \"InstanceType\": \"ml.t3.medium\",
-              \"InstanceCount\": 1,
-              \"VolumeSizeInGB\": 30
-            }
-          }"
+          aws sagemaker create-processing-job --region $AWS_REGION --processing-job-name $JOB_NAME \
+            --role-arn $SAGEMAKER_ROLE_ARN --app-specification "{
+             \"ImageUri\": \"361509912577.dkr.ecr.eu-west-1.amazonaws.com/timesheet-dq-processing:latest\",
+             \"ContainerEntrypoint\": [\"python3\", \"/opt/ml/processing/code/data_quality.py\" ] }" \
+           --processing-resources "{ \"ClusterConfig\": { \"InstanceType\": \"ml.t3.medium\", \"InstanceCount\": 1,
+               \"VolumeSizeInGB\": 30 }}" \
+           --processing-inputs "[ {
+                    \"InputName\": \"input-data\",
+                     \"S3Input\": {
+                     \"S3Uri\": \"s3://timesheet-raw-dev/input/\",
+                      \"LocalPath\": \"/opt/ml/processing/input\",
+                        \"S3DataType\": \"S3Prefix\"  } }  ]" \
+             --processing-output-config "{
+                  \"Outputs\": [{
+                   \"OutputName\": \"dq-output\",
+                   \"S3Output\": {
+                   \"S3Uri\": \"s3://timesheet-dq-results-dev/output/\",
+                  \"LocalPath\": \"/opt/ml/processing/output\",
+                   \"S3UploadMode\": \"EndOfJob\"
+                }
+               }
+              ]
+             }"
+
 
       #- aws sagemaker start-pipeline-execution --pipeline-name timesheet-edfx-dev --region $AWS_REGION
 
